--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@babel/core": "^7.7.0",
     "@babel/node": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
+    "babel-jest": "^24.9.0",
     "jest": "^24.9.0",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "supertest": "^4.0.2"
   }
 }
